--- a/provisioner/config.env
+++ b/provisioner/config.env
@@ -1,2 +1,7 @@
-export AWS_RHCOS_LAUNCH_TEMPLATE="SatelliteRhcosE2E"
+export LOCATION_ZONE_1="us-east-1a"
+export LOCATION_ZONE_2="us-east-1b"
+export LOCATION_ZONE_3="us-east-1c"
+export LOCATION_ID="aws-demo-6"
 export MANAGED_FROM_LOCATION="wdc"
+export HOST_LINK_AGENT_ENDPOINT=c-01-ws.us-east.link.satellite.cloud.ibm.com
+export DOWNSTREAM_CLUSTER_OC_VERSION="4.12_openshift"
